--- a/your-code/pandas_1_concat-merge-join_esp.ipynb
+++ b/your-code/pandas_1_concat-merge-join_esp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,11 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "df_1_2 = pd.concat([df1, df2] axis = 0)\n",
+    "df_3_4 = pd.concat([df3, df4] axis = 0)\n",
+    "df_1_2\n",
+    "df_3_4"
    ]
   },
   {
@@ -97,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "df_1_2_3_4 = pd.concat([df1, df2, df3, df4], axis = 0)"
    ]
   },
   {
@@ -116,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu código aquí"
+    "df_ignore_index = pd.concat([df1, df2, df3, df4], ignore_index = True)"
    ]
   },
   {
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +321,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tu código aquí"
+    "left.set_index('idx', inplace = True)\n",
+    "right.set_index('idx', inplace = True)\n",
+    "joined = left.join(right)"
    ]
   },
   {
