--- a/your-code/pandas_1_concat-merge-join_esp.ipynb
+++ b/your-code/pandas_1_concat-merge-join_esp.ipynb
@@ -77,6 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Concatenar df1 + df2, y df3 + df4, por filas (especificando 'axis = 0' - para concatenar por columnas usamos 'axis = 1' )\n",
     "df_1_2 = pd.concat([df1, df2] axis = 0)\n",
     "df_3_4 = pd.concat([df3, df4] axis = 0)\n",
     "df_1_2\n",
@@ -100,6 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Concatenar df1-4 todos juntos\n",
     "df_1_2_3_4 = pd.concat([df1, df2, df3, df4], axis = 0)"
    ]
   },
@@ -123,6 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Intentar concatenar ignorando el índice\n",
     "df_ignore_index = pd.concat([df1, df2, df3, df4], ignore_index = True)"
    ]
   },
@@ -317,10 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Establecer el índice 'idx' para los DataFrames 'left' y 'right' usando set_index, y unirlos usando join.\n",
     "left.set_index('idx', inplace = True)\n",
     "right.set_index('idx', inplace = True)\n",
     "joined = left.join(right)"
