--- a/your-code/pandas_1_concat-merge-join_esp.ipynb
+++ b/your-code/pandas_1_concat-merge-join_esp.ipynb
@@ -162,8 +162,8 @@
     "# Concatenar df1 + df2, y df3 + df4, por filas (especificando 'axis = 0' - para concatenar por columnas usamos 'axis = 1' )\n",
     "df_1_2 = pd.concat([df1, df2], axis = 0)\n",
     "df_3_4 = pd.concat([df3, df4], axis = 0)\n",
-    "df_1_2\n",
-    "df_3_4"
+    "print(df_1_2)\n",
+    "print(df_3_4)"
    ]
   },
   {
@@ -347,7 +347,7 @@
    ],
    "source": [
     "# Concatenar df1-4 todos juntos\n",
-    "df_1_2_3_4 = pd.concat([df1, df2, df3, df4], axis = 0)\n",
+    "df_1_2_3_4 = pd.concat([df1, df2, df3, df4], sort = False)\n",
     "df_1_2_3_4"
    ]
   },
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -750,10 +750,10 @@
    ],
    "source": [
     "# Establecer el índice 'idx' para los DataFrames 'left' y 'right' usando set_index, y unirlos usando join.\n",
-    "left.set_inde('idx', inplace = True)\n",
-    "right.set_index('idx', inplace = True)\n",
-    "joined = left.join(right)\n",
-    "joined"
+    "left_indexed = left.set_index('idx')\n",
+    "right_indexed = right.set_index('idx')\n",
+    "joined = left_indexed.join(right_indexed)\n",
+    "print(joined)"
    ]
   },
   {
