--- a/your-code/pandas_1_concat-merge-join_esp.ipynb
+++ b/your-code/pandas_1_concat-merge-join_esp.ipynb
@@ -669,19 +669,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      A   B    C    D\n",
-      "idx                  \n",
-      "i0   a0  b0  NaN  NaN\n",
-      "i1   a1  b1   c1   d1\n",
-      "i2   a2  b2   c2   d2\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>idx</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>i0</th>\n",
+       "      <td>a0</td>\n",
+       "      <td>b0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i1</th>\n",
+       "      <td>a1</td>\n",
+       "      <td>b1</td>\n",
+       "      <td>c1</td>\n",
+       "      <td>d1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i2</th>\n",
+       "      <td>a2</td>\n",
+       "      <td>b2</td>\n",
+       "      <td>c2</td>\n",
+       "      <td>d2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A   B    C    D\n",
+       "idx                  \n",
+       "i0   a0  b0  NaN  NaN\n",
+       "i1   a1  b1   c1   d1\n",
+       "i2   a2  b2   c2   d2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -689,7 +750,7 @@
     "left_indexed = left.set_index('idx')\n",
     "right_indexed = right.set_index('idx')\n",
     "joined = left_indexed.join(right_indexed)\n",
-    "print(joined)"
+    "joined"
    ]
   },
   {
